Fix:fix css in Community.css and Search.css to make the content not overlap with MainNav #99

--- a/front-end/src/auxiliary/NavBar/HomeNav.css
+++ b/front-end/src/auxiliary/NavBar/HomeNav.css
@@ -32,10 +32,10 @@
   
 #homenav_button:hover {
   text-decoration: none;
-  background-color: rgb(243, 243, 243);
+ 
 }
 
 #homenav_button:focus {
   text-decoration: underline;
-  background-color:rgb(228, 226, 226);
+
 }
