--- a/front-end/src/community/Community.css
+++ b/front-end/src/community/Community.css
@@ -1,3 +1,8 @@
+div.Community{
+    margin-top: 35px;
+    margin-bottom: 35px;
+}
+
 div.Community h1{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
     color:#353535;
